--- a/src/main/resources/public/organization.html
+++ b/src/main/resources/public/organization.html
@@ -13,10 +13,48 @@
 </head>
 
 <body ng-app="App">
-Organization
 <div ng-controller="Organization as ctrl" id="block">
     <div class="container-fluid">
         <div class="datagrid">
+            <table>
+                <tbody>
+                <tr>
+                    <th class="my-th" >
+                        <a href="\building.html" style="color: white">Building</a>
+                    </th>
+                    <th  class="my-th">
+                        <a href="\class.html" style="color: white">Class hotel</a>
+                    </th>
+                    <th  class="my-th">
+                        <a href="\customer.html" style="color: white">Customer</a>
+                    </th>
+                    <th class="my-th-selected">
+                        <a style="color: white">Organization</a>
+                    </th>
+                    <th  class="my-th">
+                        <a href="\reservation.html" style="color: white">Reservation</a>
+                    </th>
+
+                </tr>
+                <tr>
+                    <th class="my-th">
+                        <a href="\reservationOrganization.html" style="color: white">Reservation by organization</a>
+                    </th>
+                    <th  class="my-th">
+                        <a href="\room.html" style="color: white">Room</a>
+                    </th>
+                    <th  class="my-th">
+                        <a href="\service.html" style="color: white">Service</a>
+                    </th>
+                    <th  class="my-th">
+                        <a href="\typeOfOrganization.html" style="color: white">Type of organization</a>
+                    </th>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+            <div class="panel-heading"> Organization </div>
+            <div class="datagrid">
             <table>
                 <thead>
                 <tr>
