--- a/src/main/resources/public/request7.html
+++ b/src/main/resources/public/request7.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Запит №1.4</title>
+    <title>Запит №7</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body ng-app = "kursova" style="margin: 15px">
@@ -23,8 +23,8 @@
                     <th  class="my-th"style="width: 50px">
                         <a href="\request1_3.html" style="color: white">1.3</a>
                     </th>
-                    <th class="my-th-selected"style="width: 50px">
-                        <a  style="color: white">1.4</a>
+                    <th class="my-th"style="width: 50px">
+                        <a  href="request1_4.html" style="color: white">1.4</a>
                     </th>
                     <th  class="my-th"style="width: 50px">
                         <a href="\request2_1.html" style="color: white">2.1</a>
@@ -47,8 +47,8 @@
                     <th  class="my-th"style="width: 50px">
                         <a href="\request6.html" style="color: white">6</a>
                     </th>
-                    <th  class="my-th"style="width: 50px">
-                        <a href="\request7.html" style="color: white">7</a>
+                    <th  class="my-th-selected"style="width: 50px">
+                        <a  style="color: white">7</a>
                     </th>
                     <th  class="my-th"style="width: 50px">
                         <a href="\request8.html" style="color: white">8</a>
@@ -78,11 +78,11 @@
                 </tbody>
             </table>
         </div>
-        <div class="panel-heading"> Загальна кількість фірм, які здійснили бронювання місць у обсязі не меншому від вказаного протягом вказаного періоду </div>
+        <div class="panel-heading">Обсяг бронювання номерів вказаною фірмою протягом вказаного періоду та характеристика цих номерів</div>
         <div  style="font-size: 20px">
-            Кількість забронюваних номерів:
-            <input type="text" id="Amount" style="width: 90px">
-            </input>
+            Назва організації:
+            <select id="Organization" style="width: 90px">
+            </select>
             <a>&ensp;</a>
             Початкова дата:
             <input type="date"name = "bdaytime" id="FirstDate"style="width: 130px">
@@ -103,7 +103,9 @@
             <table ><!--class="table table-striped"-->
                 <thead>
                 <tr>
-                    <th width="40px">Кількість фірм</th>
+                    <th width="40px">Кількість заброньованих кмнат</th>
+                    <th>Місцевіть номерів</th>
+                    <th>Клас номерів</th>
 
 
 
@@ -111,8 +113,10 @@
                 </thead>
 
                 <tbody>
-                <tr ng-repeat = "item in request1_4">
-                    <td>{{item.amountOrganization}}</td>
+                <tr ng-repeat = "item in request7">
+                    <td>{{item.countOfReservationRooms}}</td>
+                    <td>{{item.building.areaOfNumber}}</td>
+                    <td>{{item.building.classHotel}}</td>
 
 
 
@@ -133,7 +137,7 @@
 <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 
 <script type="text/javascript" src="js/angular.min.js"></script>
-<script type="text/javascript" src="js/requests/request1_4.js"></script>
+<script type="text/javascript" src="js/requests/request7.js"></script>
 
 
 
