--- a/src/main/resources/public/request1_2.html
+++ b/src/main/resources/public/request1_2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Запит №1.4</title>
+    <title>Запит №1.2</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body ng-app = "kursova" style="margin: 15px">
@@ -17,14 +17,14 @@
                     <th class="my-th" style="width: 50px">
                         <a href="\request1_1.html" style="color: white">1.1</a>
                     </th>
-                    <th  class="my-th"style="width: 50px">
-                        <a href="\request1_2.html" style="color: white">1.2</a>
+                    <th  class="my-th-selected"style="width: 50px">
+                        <a style="color: white">1.2</a>
                     </th>
                     <th  class="my-th"style="width: 50px">
                         <a href="\request1_3.html" style="color: white">1.3</a>
                     </th>
-                    <th class="my-th-selected"style="width: 50px">
-                        <a  style="color: white">1.4</a>
+                    <th class="my-th"style="width: 50px">
+                        <a href="\request1_4.html" style="color: white">1.4</a>
                     </th>
                     <th  class="my-th"style="width: 50px">
                         <a href="\request2_1.html" style="color: white">2.1</a>
@@ -78,18 +78,10 @@
                 </tbody>
             </table>
         </div>
-        <div class="panel-heading"> Загальна кількість фірм, які здійснили бронювання місць у обсязі не меншому від вказаного протягом вказаного періоду </div>
+        <div class="panel-heading"> Загальна кількість фірм, які здійснили бронювання місць у обсязі не меншому від вказаного за весь період співробітництва </div>
         <div  style="font-size: 20px">
             Кількість забронюваних номерів:
             <input type="text" id="Amount" style="width: 90px">
-            </input>
-            <a>&ensp;</a>
-            Початкова дата:
-            <input type="date"name = "bdaytime" id="FirstDate"style="width: 130px">
-            </input>
-            <a>&ensp;</a>
-            Кінцева дата:
-            <input type="date" name = "bdaytime" id="SecondDate"style="width: 130px">
             </input>
             <a>&ensp;</a>
             <button  class="button-main" style="width: 90px; height: 30px; padding: 0px;font-size: 16px"
@@ -111,7 +103,7 @@
                 </thead>
 
                 <tbody>
-                <tr ng-repeat = "item in request1_4">
+                <tr ng-repeat = "item in request1_2">
                     <td>{{item.amountOrganization}}</td>
 
 
@@ -133,7 +125,7 @@
 <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 
 <script type="text/javascript" src="js/angular.min.js"></script>
-<script type="text/javascript" src="js/requests/request1_4.js"></script>
+<script type="text/javascript" src="js/requests/request1_2.js"></script>
 
 
 
