--- a/src/main/resources/public/request6.html
+++ b/src/main/resources/public/request6.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Запит №1.4</title>
+    <title>Запит №6</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body ng-app = "kursova" style="margin: 15px">
@@ -23,8 +23,8 @@
                     <th  class="my-th"style="width: 50px">
                         <a href="\request1_3.html" style="color: white">1.3</a>
                     </th>
-                    <th class="my-th-selected"style="width: 50px">
-                        <a  style="color: white">1.4</a>
+                    <th class="my-th"style="width: 50px">
+                        <a href="\request1_4.html" style="color: white">1.4</a>
                     </th>
                     <th  class="my-th"style="width: 50px">
                         <a href="\request2_1.html" style="color: white">2.1</a>
@@ -44,8 +44,8 @@
                     <th  class="my-th"style="width: 50px">
                         <a href="\request5.html" style="color: white">5</a>
                     </th>
-                    <th  class="my-th"style="width: 50px">
-                        <a href="\request6.html" style="color: white">6</a>
+                    <th  class="my-th-selected"style="width: 50px">
+                        <a  style="color: white">6</a>
                     </th>
                     <th  class="my-th"style="width: 50px">
                         <a href="\request7.html" style="color: white">7</a>
@@ -78,18 +78,10 @@
                 </tbody>
             </table>
         </div>
-        <div class="panel-heading"> Загальна кількість фірм, які здійснили бронювання місць у обсязі не меншому від вказаного протягом вказаного періоду </div>
+        <div class="panel-heading"> Cписок заселених номерів, які будуть звільнені до вказаної дати</div>
         <div  style="font-size: 20px">
-            Кількість забронюваних номерів:
-            <input type="text" id="Amount" style="width: 90px">
-            </input>
-            <a>&ensp;</a>
             Початкова дата:
             <input type="date"name = "bdaytime" id="FirstDate"style="width: 130px">
-            </input>
-            <a>&ensp;</a>
-            Кінцева дата:
-            <input type="date" name = "bdaytime" id="SecondDate"style="width: 130px">
             </input>
             <a>&ensp;</a>
             <button  class="button-main" style="width: 90px; height: 30px; padding: 0px;font-size: 16px"
@@ -103,19 +95,15 @@
             <table ><!--class="table table-striped"-->
                 <thead>
                 <tr>
-                    <th width="40px">Кількість фірм</th>
-
+                    <th width="40px">Номер кімнат</th>
 
 
                 </tr>
                 </thead>
 
                 <tbody>
-                <tr ng-repeat = "item in request1_4">
-                    <td>{{item.amountOrganization}}</td>
-
-
-
+                <tr ng-repeat = "item in request6">
+                    <td>{{item.numberOfRoom}}</td>
 
                 </tr>
                 </tbody>
@@ -133,7 +121,7 @@
 <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 
 <script type="text/javascript" src="js/angular.min.js"></script>
-<script type="text/javascript" src="js/requests/request1_4.js"></script>
+<script type="text/javascript" src="js/requests/request6.js"></script>
 
 
 
