Added all(20) requests

--- a/src/main/resources/public/request10.html
+++ b/src/main/resources/public/request10.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Запит №5</title>
+    <title>Запит №10</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body ng-app = "kursova" style="margin: 15px">
@@ -27,7 +27,7 @@
                         <a href="\request1_4.html" style="color: white">1.4</a>
                     </th>
                     <th  class="my-th"style="width: 50px">
-                        <a href="request2_1.html" style="color: white">2.1</a>
+                        <a href="\request2_1.html" style="color: white">2.1</a>
                     </th>
                     <th class="my-th"style="width: 50px">
                         <a href="\request2_2.html" style="color: white">2.2</a>
@@ -41,8 +41,8 @@
                     <th  class="my-th" style="width: 50px">
                         <a href="\request4_2.html" style="color: white"> 4.2 </a>
                     </th>
-                    <th  class="my-th-selected"style="width: 50px">
-                        <a  style="color: white">5</a>
+                    <th  class="my-th"style="width: 50px">
+                        <a href="\request5.html" style="color: white">5</a>
                     </th>
                     <th  class="my-th"style="width: 50px">
                         <a href="\request6.html" style="color: white">6</a>
@@ -56,8 +56,8 @@
                     <th  class="my-th"style="width: 50px">
                         <a href="\request9.html" style="color: white">9</a>
                     </th>
-                    <th  class="my-th"style="width: 50px">
-                        <a href="\request10.html" style="color: white">10</a>
+                    <th  class="my-th-selected"style="width: 50px">
+                        <a style="color: white">10</a>
                     </th>
                     <th  class="my-th"style="width: 50px">
                         <a href="\request11.html" style="color: white">11</a>
@@ -78,10 +78,14 @@
                 </tbody>
             </table>
         </div>
-        <div class="panel-heading"> Інформація про конкретний вільний номер</div>
+        <div class="panel-heading"> Інфороамція про фірми, з якими укладені договори про бронювання номерів на вказаний період</div>
         <div  style="font-size: 20px">
-            Номер кімнати:
-            <input type="text" id="Room">
+            Початкова дата:
+            <input type="date"name = "bdaytime" id="FirstDate"style="width: 130px">
+            </input>
+            <a>&ensp;</a>
+            Кінцева дата:
+            <input type="date" name = "bdaytime" id="SecondDate"style="width: 130px">
             </input>
             <a>&ensp;</a>
             <button  class="button-main" style="width: 90px; height: 30px; padding: 0px;font-size: 16px"
@@ -95,20 +99,16 @@
             <table ><!--class="table table-striped"-->
                 <thead>
                 <tr>
-                    <th width="40px">Номер кімнати</th>
-                    <th>Клас готелю</th>
-                    <th>Місцевість номера</th>
-                    <th>Дата звільнення номера</th>
+                    <th width="100px">Назва організації</th>
+                    <th>Тип організації</th>
 
                 </tr>
                 </thead>
 
                 <tbody>
-                <tr ng-repeat = "item in request5">
-                    <td>{{item.numberOfRoom}}</td>
-                    <td>{{item.building.classHotel}}</td>
-                    <td>{{item.building.areaOfNumber}}</td>
-                    <td>{{item.dataOfEviction}}</td>
+                <tr ng-repeat = "item in request10">
+                    <td>{{item.organization.nameOfOrganization}}</td>
+                    <td>{{item.organization.typeOfOrganization.organizationCharacteristic}}</td>
 
                 </tr>
                 </tbody>
@@ -126,7 +126,7 @@
 <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 
 <script type="text/javascript" src="js/angular.min.js"></script>
-<script type="text/javascript" src="js/requests/request5.js"></script>
+<script type="text/javascript" src="js/requests/request10.js"></script>
 
 
 
