--- a/src/main/resources/public/request7.html
+++ b/src/main/resources/public/request7.html
@@ -24,7 +24,7 @@
                         <a href="\request1_3.html" style="color: white">1.3</a>
                     </th>
                     <th class="my-th"style="width: 50px">
-                        <a  href="request1_4.html" style="color: white">1.4</a>
+                        <a  href="\request1_4.html" style="color: white">1.4</a>
                     </th>
                     <th  class="my-th"style="width: 50px">
                         <a href="\request2_1.html" style="color: white">2.1</a>
