--- a/src/main/resources/public/request8.html
+++ b/src/main/resources/public/request8.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Запит №5</title>
+    <title>Запит №8</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body ng-app = "kursova" style="margin: 15px">
@@ -27,7 +27,7 @@
                         <a href="\request1_4.html" style="color: white">1.4</a>
                     </th>
                     <th  class="my-th"style="width: 50px">
-                        <a href="request2_1.html" style="color: white">2.1</a>
+                        <a href="\request2_1.html" style="color: white">2.1</a>
                     </th>
                     <th class="my-th"style="width: 50px">
                         <a href="\request2_2.html" style="color: white">2.2</a>
@@ -38,11 +38,11 @@
                     <th  class="my-th" style="width: 50px">
                         <a href="\request4_1.html" style="color: white"> 4.1 </a>
                     </th>
-                    <th  class="my-th" style="width: 50px">
-                        <a href="\request4_2.html" style="color: white"> 4.2 </a>
+                    <th  class="my-th"style="width: 50px">
+                        <a href="\request4_2.html" style="color: white">4.2</a>
                     </th>
-                    <th  class="my-th-selected"style="width: 50px">
-                        <a  style="color: white">5</a>
+                    <th  class="my-th"style="width: 50px">
+                        <a href="\request5.html" style="color: white">5</a>
                     </th>
                     <th  class="my-th"style="width: 50px">
                         <a href="\request6.html" style="color: white">6</a>
@@ -50,8 +50,8 @@
                     <th  class="my-th"style="width: 50px">
                         <a href="\request7.html" style="color: white">7</a>
                     </th>
-                    <th  class="my-th"style="width: 50px">
-                        <a href="\request8.html" style="color: white">8</a>
+                    <th  class="my-th-selected"style="width: 50px">
+                        <a  style="color: white">8</a>
                     </th>
                     <th  class="my-th"style="width: 50px">
                         <a href="\request9.html" style="color: white">9</a>
@@ -78,37 +78,26 @@
                 </tbody>
             </table>
         </div>
-        <div class="panel-heading"> Інформація про конкретний вільний номер</div>
-        <div  style="font-size: 20px">
-            Номер кімнати:
-            <input type="text" id="Room">
-            </input>
-            <a>&ensp;</a>
-            <button  class="button-main" style="width: 90px; height: 30px; padding: 0px;font-size: 16px"
-                     ng-click="ctrl.update_request()">
-                Змінити
-            </button>
-            <br>
-        </div>
+        <div class="panel-heading"> Cписок незадоволених клієнтів та їх скарги</div>
+
         <div class="datagrid">
 
             <table ><!--class="table table-striped"-->
                 <thead>
                 <tr>
-                    <th width="40px">Номер кімнати</th>
-                    <th>Клас готелю</th>
-                    <th>Місцевість номера</th>
-                    <th>Дата звільнення номера</th>
+                    <th width="100px">П.І.Б клієнта</th>
+                    <th>Скарги </th>
 
                 </tr>
                 </thead>
 
                 <tbody>
-                <tr ng-repeat = "item in request5">
-                    <td>{{item.numberOfRoom}}</td>
-                    <td>{{item.building.classHotel}}</td>
-                    <td>{{item.building.areaOfNumber}}</td>
-                    <td>{{item.dataOfEviction}}</td>
+                <tr ng-repeat = "item in request8">
+                    <td>{{item.nameOfCustomer}}</td>
+                    <td>{{item.feedbackAndSuggestion}}</td>
+
+
+
 
                 </tr>
                 </tbody>
@@ -126,7 +115,7 @@
 <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 
 <script type="text/javascript" src="js/angular.min.js"></script>
-<script type="text/javascript" src="js/requests/request5.js"></script>
+<script type="text/javascript" src="js/requests/request8.js"></script>
 
 
 
