--- a/src/main/resources/public/request9.html
+++ b/src/main/resources/public/request9.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Запит №5</title>
+    <title>Запит №9</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body ng-app = "kursova" style="margin: 15px">
@@ -41,8 +41,8 @@
                     <th  class="my-th" style="width: 50px">
                         <a href="\request4_2.html" style="color: white"> 4.2 </a>
                     </th>
-                    <th  class="my-th-selected"style="width: 50px">
-                        <a  style="color: white">5</a>
+                    <th  class="my-th"style="width: 50px">
+                        <a  href="\request5.html" style="color: white">5</a>
                     </th>
                     <th  class="my-th"style="width: 50px">
                         <a href="\request6.html" style="color: white">6</a>
@@ -53,8 +53,8 @@
                     <th  class="my-th"style="width: 50px">
                         <a href="\request8.html" style="color: white">8</a>
                     </th>
-                    <th  class="my-th"style="width: 50px">
-                        <a href="\request9.html" style="color: white">9</a>
+                    <th  class="my-th-selected"style="width: 50px">
+                        <a  style="color: white">9</a>
                     </th>
                     <th  class="my-th"style="width: 50px">
                         <a href="\request10.html" style="color: white">10</a>
@@ -78,7 +78,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="panel-heading"> Інформація про конкретний вільний номер</div>
+        <div class="panel-heading"> Інформація про постояльця із вказаного номера</div>
         <div  style="font-size: 20px">
             Номер кімнати:
             <input type="text" id="Room">
@@ -95,20 +95,20 @@
             <table ><!--class="table table-striped"-->
                 <thead>
                 <tr>
-                    <th width="40px">Номер кімнати</th>
-                    <th>Клас готелю</th>
-                    <th>Місцевість номера</th>
-                    <th>Дата звільнення номера</th>
+                    <th width="100px">П.І.Б клієнта</th>
+                    <th>Відгуки і пропозиції</th>
+                    <th>Назва додаткової послуги</th>
+                    <th>Рахунок за послугу</th>
 
                 </tr>
                 </thead>
 
                 <tbody>
-                <tr ng-repeat = "item in request5">
-                    <td>{{item.numberOfRoom}}</td>
-                    <td>{{item.building.classHotel}}</td>
-                    <td>{{item.building.areaOfNumber}}</td>
-                    <td>{{item.dataOfEviction}}</td>
+                <tr ng-repeat = "item in request9">
+                    <td>{{item.nameOfCustomer}}</td>
+                    <td>{{item.feedbackAndSuggestion}}</td>
+                    <td>{{item.service.nameOfService}}</td>
+                    <td>{{item.service.costOfService}}</td>
 
                 </tr>
                 </tbody>
@@ -126,7 +126,7 @@
 <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 
 <script type="text/javascript" src="js/angular.min.js"></script>
-<script type="text/javascript" src="js/requests/request5.js"></script>
+<script type="text/javascript" src="js/requests/request9.js"></script>
 
 
 
