--- a/src/main/resources/public/building.html
+++ b/src/main/resources/public/building.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Building</title>
+    <title>Готелі</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
@@ -20,40 +20,40 @@
                     <tbody>
                     <tr>
                         <th class="my-th-selected" >
-                            <a style="color: white">Building</a>
+                            <a style="color: white">Готелі</a>
                         </th>
                         <th  class="my-th">
-                            <a href="\class.html" style="color: white">Class hotel</a>
+                            <a href="\class.html" style="color: white">Класи готелів</a>
                         </th>
                         <th  class="my-th">
-                            <a href="\customer.html" style="color: white">Customer</a>
+                            <a href="\customer.html" style="color: white">Клієнти</a>
                         </th>
                         <th class="my-th">
-                            <a href="\organization.html" style="color: white">Organization</a>
+                            <a href="\organization.html" style="color: white">Організації</a>
                         </th>
                         <th  class="my-th">
-                            <a href="\reservation.html" style="color: white">Reservation</a>
+                            <a href="\reservation.html" style="color: white">Бронювання</a>
                         </th>
 
                     </tr>
                     <tr>
                         <th class="my-th">
-                            <a href="\reservationOrganization.html" style="color: white">Reservation by organization</a>
+                            <a href="\reservationOrganization.html" style="color: white">Бронювання організаціями</a>
                         </th>
                         <th  class="my-th">
-                            <a href="\room.html" style="color: white">Room</a>
+                            <a href="\room.html" style="color: white">Кімнати</a>
                         </th>
                         <th  class="my-th">
-                            <a href="\service.html" style="color: white">Service</a>
+                            <a href="\service.html" style="color: white">Послигу</a>
                         </th>
                         <th  class="my-th">
-                            <a href="\typeOfOrganization.html" style="color: white">Type of organization</a>
+                            <a href="\typeOfOrganization.html" style="color: white">Типи організацій</a>
                         </th>
                     </tr>
                     </tbody>
                 </table>
         </div>
-        <div class="panel-heading"> Building </div>
+        <div class="panel-heading"> Готелі </div>
         <div class="datagrid">
             <table>
                 <thead>
@@ -135,12 +135,12 @@
                         Вкажіть тип номерів
                         <br>
                         <select id="AreaOfNumbers">
-                            <option>single</option>
-                            <option>double</option>
-                            <option>triple</option>
+                            <option>одномісні</option>
+                            <option>двохмісні</option>
+                            <option>трьохмісні</option>
                         </select>
                         <br>
-                        Введіть адрес готелю
+                        Введіть адресу готелю
                         <br>
                         <input type="text" id="AddressOfHotel">
                         <br>
@@ -199,7 +199,7 @@
                             <option>triple</option>
                         </select>
                         <br>
-                        Введіть адрес готелю
+                        Введіть адресу готелю
                         <br>
                         <input type="text" id="AddressOfHotelUPD">
                         <br>
