--- a/src/main/resources/public/customer.html
+++ b/src/main/resources/public/customer.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Customer</title>
+    <title>Клієнти</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
@@ -20,46 +20,46 @@
                 <tbody>
                 <tr>
                     <th class="my-th" >
-                        <a href="\building.html" style="color: white">Building</a>
+                        <a href="\building.html" style="color: white">Готелі</a>
                     </th>
                     <th  class="my-th">
-                        <a href="\class.html" style="color: white">Class hotel</a>
+                        <a href="\class.html" style="color: white">Класи готелів</a>
                     </th>
                     <th  class="my-th-selected">
-                        <a style="color: white">Customer</a>
+                        <a style="color: white">Клієнти</a>
                     </th>
                     <th class="my-th">
-                        <a href="\organization.html" style="color: white">Organization</a>
+                        <a href="\organization.html" style="color: white">Організації</a>
                     </th>
                     <th  class="my-th">
-                        <a href="\reservation.html" style="color: white">Reservation</a>
+                        <a href="\reservation.html" style="color: white">Бронювання</a>
                     </th>
 
                 </tr>
                 <tr>
                     <th class="my-th">
-                        <a href="\reservationOrganization.html" style="color: white">Reservation by organization</a>
+                        <a href="\reservationOrganization.html" style="color: white">Бронювання організаціїми</a>
                     </th>
                     <th  class="my-th">
-                        <a href="\room.html" style="color: white">Room</a>
+                        <a href="\room.html" style="color: white">Кімнати</a>
                     </th>
                     <th  class="my-th">
-                        <a href="\service.html" style="color: white">Service</a>
+                        <a href="\service.html" style="color: white">Послуги</a>
                     </th>
                     <th  class="my-th">
-                        <a href="\typeOfOrganization.html" style="color: white">Type of organization</a>
+                        <a href="\typeOfOrganization.html" style="color: white">Типи організацій</a>
                     </th>
                 </tr>
                 </tbody>
             </table>
         </div>
-        <div class="panel-heading"> Customer </div>
+        <div class="panel-heading"> Клієнти </div>
         <div class="datagrid">
             <table>
                 <thead>
                 <tr>
                     <th width="40px">Ідентифікатор</th>
-                    <th>Ім'я клієнта</th>
+                    <th>П.І.Б клієнта</th>
                     <th>Номер кімнати</th>
                     <th>Дата бронювання</th>
                     <th>Дата заселення</th>
@@ -117,7 +117,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        Введіть ім'я гостя
+                        Введіть П.І.Б клієнта
                         <br>
                         <input type="text" id="NameOfCustomer">
                         <br>
@@ -137,7 +137,7 @@
                         <br>
                         <input type="date" name="bdaytime" id="DateOfEviction">
                         <br>
-                        Вкажіть послугу
+                        Вкажіть назву послуги
                         <br>
                         <select id="NameOfService">
                         </select>
@@ -181,7 +181,7 @@
                         <br>
                         <div id="IdCustomerUPD"></div>
                         <br>
-                        Введіть ім'я гостя
+                        Введіть П.І.Б клієнта
                         <br>
                         <input type="text" id="NameOfCustomerUPD">
                         <br>
