--- a/src/main/resources/public/organization.html
+++ b/src/main/resources/public/organization.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Organization</title>
+    <title>Організації</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
@@ -20,40 +20,40 @@
                 <tbody>
                 <tr>
                     <th class="my-th" >
-                        <a href="\building.html" style="color: white">Building</a>
+                        <a href="\building.html" style="color: white">Готелі</a>
                     </th>
                     <th  class="my-th">
-                        <a href="\class.html" style="color: white">Class hotel</a>
+                        <a href="\class.html" style="color: white">Класи готелів</a>
                     </th>
                     <th  class="my-th">
-                        <a href="\customer.html" style="color: white">Customer</a>
+                        <a href="\customer.html" style="color: white">Клієнти</a>
                     </th>
                     <th class="my-th-selected">
-                        <a style="color: white">Organization</a>
+                        <a style="color: white">Організації</a>
                     </th>
                     <th  class="my-th">
-                        <a href="\reservation.html" style="color: white">Reservation</a>
+                        <a href="\reservation.html" style="color: white">Бронювання</a>
                     </th>
 
                 </tr>
                 <tr>
                     <th class="my-th">
-                        <a href="\reservationOrganization.html" style="color: white">Reservation by organization</a>
+                        <a href="\reservationOrganization.html" style="color: white">Бронювання організаціями</a>
                     </th>
                     <th  class="my-th">
-                        <a href="\room.html" style="color: white">Room</a>
+                        <a href="\room.html" style="color: white">Кімнати</a>
                     </th>
                     <th  class="my-th">
-                        <a href="\service.html" style="color: white">Service</a>
+                        <a href="\service.html" style="color: white">Послуги</a>
                     </th>
                     <th  class="my-th">
-                        <a href="\typeOfOrganization.html" style="color: white">Type of organization</a>
+                        <a href="\typeOfOrganization.html" style="color: white">Типи оганізацій</a>
                     </th>
                 </tr>
                 </tbody>
             </table>
         </div>
-            <div class="panel-heading"> Organization </div>
+            <div class="panel-heading"> Організації </div>
             <div class="datagrid">
             <table>
                 <thead>
