Added all(20) requests

--- a/src/main/resources/public/building.html
+++ b/src/main/resources/public/building.html
@@ -122,15 +122,15 @@
                         <br>
                         Введіть кількість поверхів
                         <br>
-                        <input type="text" id="CountOfFloors">
+                        <input type="number" id="CountOfFloors">
                         <br>
                         Введіть загальну кількість кімнат
                         <br>
-                        <input type="text" id="TotalNumberOfRooms">
+                        <input type="number" id="TotalNumberOfRooms">
                         <br>
                         Введіть кількість кімнат на поверсі
                         <br>
-                        <input type="text" id="CountRoomsOnTheFloor">
+                        <input type="number" id="CountRoomsOnTheFloor">
                         <br>
                         Вкажіть тип номерів
                         <br>
