Added all(20) requests

--- a/src/main/resources/public/class.html
+++ b/src/main/resources/public/class.html
@@ -105,7 +105,7 @@
                     <div class="modal-body">
                         Введіть клас готелю
                         <br>
-                        <input type="text" id="ClassHotel">
+                        <input type="number" id="ClassHotel">
                         <br>
                         Вкажіть номер готелю
                         <br>
