--- a/src/main/resources/public/request15.html
+++ b/src/main/resources/public/request15.html
@@ -78,7 +78,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="panel-heading">інформацію про те, ким був зайнятий вказаний номер протягом вказаного періоду</div>
+        <div class="panel-heading">Інформацію про те, ким був зайнятий вказаний номер протягом вказаного періоду</div>
         <div  style="font-size: 20px">
             Кімната:
             <select id="Room">
