--- a/src/main/resources/public/reservationOrganization.html
+++ b/src/main/resources/public/reservationOrganization.html
@@ -121,15 +121,15 @@
                     <div class="modal-body">
                         Введіть поверх
                         <br>
-                        <input type="text" id="Floor">
+                        <input type="number" id="Floor">
                         <br>
                         Введіть кількість заброньованих кімнат
                         <br>
-                        <input type="text" id="СountOfReservationRooms">
+                        <input type="number" id="СountOfReservationRooms">
                         <br>
                         Введіть кількість клієнтів
                         <br>
-                        <input type="text" id="TotalCountOfPeople">
+                        <input type="number" id="TotalCountOfPeople">
                         <br>
                         Вкажіть клас готелю
                         <br>
