--- a/src/main/resources/public/room.html
+++ b/src/main/resources/public/room.html
@@ -112,7 +112,7 @@
                     <div class="modal-body">
                         Введіть номер кімнати
                         <br>
-                        <input type="text" id="NumberOfRoom">
+                        <input type="number" id="NumberOfRoom">
                         <br>
                         Вкажіть дату заселення
                         <br>
