--- a/src/main/resources/public/service.html
+++ b/src/main/resources/public/service.html
@@ -109,7 +109,7 @@
                         <br>
                         Введіть ціну за послугу
                         <br>
-                        <input type="text" id="CostOfService">
+                        <input type="number" id="CostOfService">
                         <br>
 
 
