Added all(20) requests

--- a/src/main/resources/public/customer.html
+++ b/src/main/resources/public/customer.html
@@ -123,7 +123,7 @@
                         <br>
                         Вкажіть кімнату
                         <br>
-                        <input type="number" id="NumberOfRoom">
+                        <input type="text" id="NumberOfRoom">
                         <br>
                         Вкажіть дату бронювання
                         <br>
