--- a/src/main/resources/public/room.html
+++ b/src/main/resources/public/room.html
@@ -23,7 +23,7 @@
                         <a href="\building.html" style="color: white">Готелі</a>
                     </th>
                     <th  class="my-th">
-                        <a href="\class.html" style="color: white">класи готелів</a>
+                        <a href="\class.html" style="color: white">Класи готелів</a>
                     </th>
                     <th  class="my-th">
                         <a href="\customer.html" style="color: white">Клієнти</a>
