Added all(20) requests

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -5,6 +5,7 @@
     <title>Титульна сторінка</title>
 </head>
 <body>
+<a href="main.html">Головна</a>
 <h4 style="text-align: center; font-weight: bold; font-size: 14px;">
     Міністерство освіти і науки України<br>
     Чернівецький національний університет імені Юрія Федьковича<br>
