Added all(20) requests

--- a/src/main/resources/public/request10.html
+++ b/src/main/resources/public/request10.html
@@ -78,7 +78,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="panel-heading"> Інфороамція про фірми, з якими укладені договори про бронювання номерів на вказаний період</div>
+        <div class="panel-heading"> Інформація про фірми, з якими укладені договори про бронювання номерів на вказаний період</div>
         <div  style="font-size: 20px">
             Початкова дата:
             <input type="date"name = "bdaytime" id="FirstDate"style="width: 130px">
