--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -5,7 +5,7 @@
     <title>Титульна сторінка</title>
 </head>
 <body>
-<a href="main.html">Головна</a>
+<a href="main.html" style="font-size: 35px; ">Головна</a>
 <h4 style="text-align: center; font-weight: bold; font-size: 14px;">
     Міністерство освіти і науки України<br>
     Чернівецький національний університет імені Юрія Федьковича<br>
