--- a/src/main/resources/public/request11.html
+++ b/src/main/resources/public/request11.html
@@ -78,6 +78,7 @@
                 </tbody>
             </table>
         </div>
+        <a href="building.html" class="button" >Таблиці</a>
         <div class="panel-heading">Інформація про клієнтів, які найчастіше відвідують готель загалом</div>
 
         <div class="datagrid">
