--- a/src/main/resources/public/request14.html
+++ b/src/main/resources/public/request14.html
@@ -78,6 +78,7 @@
                 </tbody>
             </table>
         </div>
+        <a href="building.html" class="button" >Таблиці</a>
         <div class="panel-heading">Інформація про вказаного клієнта</div>
         <div  style="font-size: 20px">
             П.І.Б клієнта:
