--- a/src/main/resources/public/request15.html
+++ b/src/main/resources/public/request15.html
@@ -78,6 +78,7 @@
                 </tbody>
             </table>
         </div>
+        <a href="building.html" class="button" >Таблиці</a>
         <div class="panel-heading">Інформацію про те, ким був зайнятий вказаний номер протягом вказаного періоду</div>
         <div  style="font-size: 20px">
             Кімната:
