--- a/src/main/resources/public/request1_3.html
+++ b/src/main/resources/public/request1_3.html
@@ -78,6 +78,7 @@
                 </tbody>
             </table>
         </div>
+        <a href="building.html" class="button" >Таблиці</a>
         <div class="panel-heading"> Перелік фірм, які здійснили бронювання місць у обсязі не меншому від вказаного протягом указаного періоду </div>
         <div  style="font-size: 20px">
             Кількість забронюваних номерів:
