--- a/src/main/resources/public/request4_1.html
+++ b/src/main/resources/public/request4_1.html
@@ -78,6 +78,7 @@
                 </tbody>
             </table>
         </div>
+        <a href="building.html" class="button" >Таблиці</a>
         <div class="panel-heading"> Кількість вільних номерів загалом</div>
         <div  style="font-size: 20px">
             Дата:
