--- a/src/main/resources/public/request7.html
+++ b/src/main/resources/public/request7.html
@@ -78,6 +78,7 @@
                 </tbody>
             </table>
         </div>
+        <a href="building.html" class="button" >Таблиці</a>
         <div class="panel-heading">Обсяг бронювання номерів вказаною фірмою протягом вказаного періоду та характеристика цих номерів</div>
         <div  style="font-size: 20px">
             Назва організації:
