--- a/src/main/resources/public/request8.html
+++ b/src/main/resources/public/request8.html
@@ -78,6 +78,7 @@
                 </tbody>
             </table>
         </div>
+        <a href="building.html" class="button" >Таблиці</a>
         <div class="panel-heading"> Cписок незадоволених клієнтів та їх скарги</div>
 
         <div class="datagrid">
