--- a/src/main/resources/public/request9.html
+++ b/src/main/resources/public/request9.html
@@ -78,6 +78,7 @@
                 </tbody>
             </table>
         </div>
+        <a href="building.html" class="button" >Таблиці</a>
         <div class="panel-heading"> Інформація про постояльця із вказаного номера</div>
         <div  style="font-size: 20px">
             Номер кімнати:
