--- a/src/main/resources/public/request10.html
+++ b/src/main/resources/public/request10.html
@@ -78,6 +78,7 @@
                 </tbody>
             </table>
         </div>
+        <a href="building.html" class="button" >Таблиці</a>
         <div class="panel-heading"> Інформація про фірми, з якими укладені договори про бронювання номерів на вказаний період</div>
         <div  style="font-size: 20px">
             Початкова дата:
