--- a/src/main/resources/public/request13.html
+++ b/src/main/resources/public/request13.html
@@ -78,6 +78,7 @@
                 </tbody>
             </table>
         </div>
+        <a href="building.html" class="button" >Таблиці</a>
         <div class="panel-heading"> Інформація про нових клієнтів протягом вказаного періоду</div>
         <div  style="font-size: 20px">
             Початкова дата:
