--- a/src/main/resources/public/request1_1.html
+++ b/src/main/resources/public/request1_1.html
@@ -78,6 +78,7 @@
                 </tbody>
             </table>
         </div>
+        <a href="building.html" class="button" >Таблиці</a>
         <div class="panel-heading"> Перелік фірм, які здійснили бронювання місць у обсязі не меншому від вказаного за весь період співробітництва </div>
         <div  style="font-size: 20px">
             Кількість забронюваних номерів:
