--- a/src/main/resources/public/room.html
+++ b/src/main/resources/public/room.html
@@ -49,6 +49,9 @@
                     <th  class="my-th">
                         <a href="\typeOfOrganization.html" style="color: white">Типи організацій</a>
                     </th>
+                    <th class="my-th">
+                        <a href="\request1_1.html" style="color: black">Запити</a>
+                    </th>
                 </tr>
                 </tbody>
             </table>
